improving HTML output